[package]
name = "mimicr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["gzip", "json", "serde_json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.188"
serde_derive = "1.0.188"
reqwest_cookie_store = "0.6.0"
serde_json = "1.0.107"
derive_builder = "0.12.0"
async-trait = "0.1.73"